<?xml version="1.0"?>
<package format="2">
  <name>mjregrasping_cpp</name>
  <version>0.0.0</version>
  <description>The mjregrasping_cpp package</description>

  <maintainer email="pmitrano@umich.edu">peter</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>arc_utilities</depend>
  <depend>moveit_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>pybind11_catkin</depend>
  <depend>roscpp</depend>
  <depend>sdf_tools</depend>
  <depend>rospy</depend>
</package>
